# Travel-RT-backend

./: .dockerignore  .env-example  .pre-commit-config.yaml  ADMIN_INSTRUCTIONS.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  ex_place_full_description.html  example_data.json  manage.py  pyproject.toml  pytest.ini  ruff.toml
tests/: __init__.py  conftest.py
tests/accounts/: __init__.py  test_auth.py  test_create_user.py  test_login.py  test_models.py  test_views.py
tests/accounts/factories/: __init__.py
tests/locations/: __init__.py  test_models.py  test_views.py
tests/locations/factories/: __init__.py  district.py  (+1 more)
tests/news/: __init__.py  test_models.py  test_views.py
tests/places/: __init__.py  test_models.py  test_views.py
tests/routers/: __init__.py  test_models.py  test_views.py
travel/: celery.py  urls.py  wsgi.py
travel/account/: apps.py  models.py
travel/accounts/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
travel/ai/: apps.py  client.py
travel/core/: pagination.py
travel/locations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
travel/news/: admin.py  apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
travel/places/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
travel/prompts/: place_tagging.py  route_format_html.py  route_generation.py  route_intent.py
travel/routers/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
travel/settings/: common.py  local.py  prod.py  test.py
(+23 files in other folders)
